Tests/Flask Run call error.txt
me7196pe@DLP-1914261-L MINGW64 ~/ITEC 2905 Capstone/Project3/MCTC_ITEC2905_fall2023_proj3_team03_Justin_Amy_Peng (recall_results_html)
$ flask run
 * Debug mode: off
WARNING: This is a development server. Do not use it in a production deployment. Use a production WSGI server instead.
 * Running on http://127.0.0.1:5000
Press CTRL+C to quit
127.0.0.1 - - [14/Oct/2023 21:57:19] "GET / HTTP/1.1" 200 -
[2023-10-14 21:57:27,784] ERROR in app: Exception on /get_car [GET]
Traceback (most recent call last):
  File "C:\Users\me7196pe\AppData\Local\Programs\Python\Python311\Lib\site-packages\flask\app.py", line 1455, in wsgi_app
    response = self.full_dispatch_request()
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\me7196pe\AppData\Local\Programs\Python\Python311\Lib\site-packages\flask\app.py", line 869, in full_dispatch_request
    rv = self.handle_user_exception(e)
         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\me7196pe\AppData\Local\Programs\Python\Python311\Lib\site-packages\flask\app.py", line 867, in full_dispatch_request
    rv = self.dispatch_request()
         ^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\me7196pe\AppData\Local\Programs\Python\Python311\Lib\site-packages\flask\app.py", line 852, in dispatch_request
    return self.ensure_sync(self.view_functions[rule.endpoint])(**view_args)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\me7196pe\ITEC 2905 Capstone\Project3\MCTC_ITEC2905_fall2023_proj3_team03_Justin_Amy_Peng\app.py", line 26, in get_car_recall
    car_recalls = car_recall_api(car)
                  ^^^^^^^^^^^^^^^^^^^
TypeError: 'module' object is not callable
127.0.0.1 - - [14/Oct/2023 21:57:27] "GET /get_car?year=2012&make=Fiat&model=500 HTTP/1.1" 500 -
[2023-10-14 22:00:53,717] ERROR in app: Exception on /get_car [GET]
Traceback (most recent call last):
  File "C:\Users\me7196pe\AppData\Local\Programs\Python\Python311\Lib\site-packages\flask\app.py", line 1455, in wsgi_app
    response = self.full_dispatch_request()
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\me7196pe\AppData\Local\Programs\Python\Python311\Lib\site-packages\flask\app.py", line 869, in full_dispatch_request
    rv = self.handle_user_exception(e)
         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\me7196pe\AppData\Local\Programs\Python\Python311\Lib\site-packages\flask\app.py", line 867, in full_dispatch_request
    rv = self.dispatch_request()
         ^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\me7196pe\AppData\Local\Programs\Python\Python311\Lib\site-packages\flask\app.py", line 852, in dispatch_request
    return self.ensure_sync(self.view_functions[rule.endpoint])(**view_args)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\me7196pe\ITEC 2905 Capstone\Project3\MCTC_ITEC2905_fall2023_proj3_team03_Justin_Amy_Peng\app.py", line 26, in get_car_recall
    car_recalls = car_recall_api.get_car_recall(car)
                  ^^^^^^^^^^^^^^^^^^^
TypeError: 'module' object is not callable
127.0.0.1 - - [14/Oct/2023 22:00:53] "GET /get_car?year=2012&make=Fiat&model=500 HTTP/1.1" 500 -
[2023-10-14 22:00:54,523] ERROR in app: Exception on /get_car [GET]
Traceback (most recent call last):
  File "C:\Users\me7196pe\AppData\Local\Programs\Python\Python311\Lib\site-packages\flask\app.py", line 1455, in wsgi_app
    response = self.full_dispatch_request()
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\me7196pe\AppData\Local\Programs\Python\Python311\Lib\site-packages\flask\app.py", line 869, in full_dispatch_request
    rv = self.handle_user_exception(e)
         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\me7196pe\AppData\Local\Programs\Python\Python311\Lib\site-packages\flask\app.py", line 867, in full_dispatch_request
    rv = self.dispatch_request()
         ^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\me7196pe\AppData\Local\Programs\Python\Python311\Lib\site-packages\flask\app.py", line 852, in dispatch_request
    return self.ensure_sync(self.view_functions[rule.endpoint])(**view_args)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\me7196pe\ITEC 2905 Capstone\Project3\MCTC_ITEC2905_fall2023_proj3_team03_Justin_Amy_Peng\app.py", line 26, in get_car_recall
    car_recalls = car_recall_api.get_car_recall(car)
                  ^^^^^^^^^^^^^^^^^^^
TypeError: 'module' object is not callable
127.0.0.1 - - [14/Oct/2023 22:00:54] "GET /get_car?year=2012&make=Fiat&model=500 HTTP/1.1" 500 -
[2023-10-14 22:00:56,892] ERROR in app: Exception on /get_car [GET]
Traceback (most recent call last):
  File "C:\Users\me7196pe\AppData\Local\Programs\Python\Python311\Lib\site-packages\flask\app.py", line 1455, in wsgi_app
    response = self.full_dispatch_request()
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\me7196pe\AppData\Local\Programs\Python\Python311\Lib\site-packages\flask\app.py", line 869, in full_dispatch_request
    rv = self.handle_user_exception(e)
         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\me7196pe\AppData\Local\Programs\Python\Python311\Lib\site-packages\flask\app.py", line 867, in full_dispatch_request
    rv = self.dispatch_request()
         ^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\me7196pe\AppData\Local\Programs\Python\Python311\Lib\site-packages\flask\app.py", line 852, in dispatch_request
    return self.ensure_sync(self.view_functions[rule.endpoint])(**view_args)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\me7196pe\ITEC 2905 Capstone\Project3\MCTC_ITEC2905_fall2023_proj3_team03_Justin_Amy_Peng\app.py", line 26, in get_car_recall
    car_recalls = car_recall_api.get_car_recall(car)
                  ^^^^^^^^^^^^^^^^^^^
TypeError: 'module' object is not callable
127.0.0.1 - - [14/Oct/2023 22:00:56] "GET /get_car?year=2012&make=Fiat&model=500 HTTP/1.1" 500 -
